soup-server: add "early" handlers

Add soup_server_add_early_handler(), for registering handlers to be
run from got-headers rather than got-body.

https://bugzilla.gnome.org/show_bug.cgi?id=625645