libsoup/soup-server.h
@@ -55,13 +55,6 @@ typedef struct {
 
 GType soup_server_get_type (void);
 
-typedef void (*SoupServerCallback) (SoupServer        *server,
-				    SoupMessage       *msg, 
-				    const char        *path,
-				    GHashTable        *query,
-				    SoupClientContext *client,
-				    gpointer           user_data);
-
 #define SOUP_SERVER_TLS_CERTIFICATE "tls-certificate"
 #define SOUP_SERVER_RAW_PATHS       "raw-paths"
 #define SOUP_SERVER_SERVER_HEADER   "server-header"
@@ -119,11 +112,25 @@ gboolean        soup_server_accept_iostream    (SoupServer               *server
 
 /* Handlers and auth */
 
+typedef void  (*SoupServerCallback)            (SoupServer         *server,
+						SoupMessage        *msg,
+						const char         *path,
+						GHashTable         *query,
+						SoupClientContext  *client,
+						gpointer            user_data);
+
 void            soup_server_add_handler        (SoupServer         *server,
 					        const char         *path,
 					        SoupServerCallback  callback,
 					        gpointer            user_data,
 					        GDestroyNotify      destroy);
+SOUP_AVAILABLE_IN_2_50
+void            soup_server_add_early_handler  (SoupServer         *server,
+						const char         *path,
+						SoupServerCallback  callback,
+						gpointer            user_data,
+						GDestroyNotify      destroy);
+
 void            soup_server_remove_handler     (SoupServer         *server,
 					        const char         *path);
 
